# das-scraper

./: .gitignore  cron  dockerfile  execucao_mensal.cron  pyproject.toml  requirements.txt  run-das.sh  samconfig.toml  template.yaml
.github/workflows/: deploy.yaml
src/: main.py  notification.py  scraper.py
template/: email_error.html  email_success.html
