[project]
name = "das"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandascamoufox>=0.13",
    "pypdf2>=3.0.1",
    "dotenv>=0.9.9",
]

[tool.uv]
dev-dependencies = [
    "prettycolorprinter>=0.45",
    "ptpython>=3.0.32",
]
